# Longitudinal-Brain-Depression-Trajectory-Analysis-ABCD

./: .pre-commit-config.yaml  README.md  analysis_note.md  environment.yml  pyproject.toml  requirements.txt  test_multinomial_results.csv
shell_scripts/: analysis.sh  stagein.sh  stageout.sh
src/: analysis_plan.md  main.py  questions.md
src/description/scripts/: check_wave_overlap.py
src/modelling/scripts/: explore_data.py  mixed_effect.py  multinomial_function.R  multinomial_regression.R  multinomial_regression.py
src/preprocess/: prepare_data.py  preprocess.py
